# interview-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  SAFETY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
demo/: index.html
demo/static/: app.js  style.css
knowledge/: algorithms.md  golang.md  linux.md  mysql.md  networking.md  operating-systems.md  python.md  redis.md  system-design.md
migrations/: README.md  env.py
migrations/versions/: 001_initial.py
scripts/: generate_demo_gif.py  setup_git_history.sh
src/interview_agent/: __init__.py  cli.py  config.py  models.py
src/interview_agent/agent/: runner.py
src/interview_agent/api/: main.py
src/interview_agent/decision/: engine.py
src/interview_agent/lifecycle/: event_log.py  state_machine.py
src/interview_agent/llm/: anthropic_adapter.py  base.py  gemini_adapter.py  kimi_adapter.py  mock_adapter.py  openai_adapter.py  router.py
src/interview_agent/safety/: guard.py
src/interview_agent/tools/: base.py  interview_kb.py  registry.py
tests/: conftest.py
tests/integration/: test_agent_runner.py
tests/unit/: test_decision_engine.py  test_event_log.py  test_kb_tool.py  test_llm_mock.py  test_safety.py  test_state_machine.py
