[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-agent"
version = "0.1.0"
description = "Deterministic AI interview coach — multi-LLM agent with rationale traces, state-machine lifecycle, and safety controls"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Interview Agent Contributors" }]
keywords = ["ai-agent", "llm", "interview-prep", "agentic-ai", "multi-llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "openai>=1.35.0",
  "anthropic>=0.29.0",
  "google-generativeai>=0.7.0",
  "anyio>=4.4.0",
  "tenacity>=8.3.0",
  "structlog>=24.2.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "orjson>=3.10.5",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.1",
  "aiosqlite>=0.20.0",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests>=2.31.0",
  "pillow>=10.4.0",
  "imageio>=2.34.0",
]

[project.scripts]
interview-agent = "interview_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_agent"]

[tool.hatch.build.targets.wheel.sources]
"src/interview_agent" = "interview_agent"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["interview_agent"]
mypy_path = "src"

[tool.coverage.run]
source = ["interview_agent"]
omit = ["*/tests/*"]
